[package]
name = "query_pairs_yul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "openssl",
    "ws",
    "ledger",
    "legacy"
] }
tokio = { version = "1.18.1", features = ["full"] }
hex-literal = "0.3.4"
color-eyre = "0.6.1"
